# cpp-demo

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  makefile
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  function_benchmark.cpp
bindings/example/: go.mod  num.go
bindings/go/: demo.go  demo_test.go
bindings/go/include/: function.h
include/: function.h
src/: CMakeLists.txt  function.cpp  main.cpp
test/: CMakeLists.txt  function_test.cpp  gtest_test.cpp
